syntax = "proto3";

option csharp_namespace = "GrpcApplicant";


service ApplicantGrpc{

	rpc RemoveExamFromApplicantData(RemoveExamRequest) returns (RemoveExamResponce);
	rpc GetUseData(GetUserDataRequest) returns (GetUserDataResponse);
	rpc CheckIfExamExistsInUsers(UserExamRequest) returns (UserExamResponse);
}

message RemoveExamRequest{
	string userId = 1;
	int32 examId = 2;
}

message RemoveExamResponce{
	bool success = 1;
	string error = 2;
}

message GetUserDataRequest {
	string userId = 1;
}

message GetUserDataResponse {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string email = 4;
}

message UserExamRequest {
	int32 examId = 1;
}

message UserExamResponse {
	bool exists = 1;
}



